2000-04-07  Richard Henderson  <rth@cygnus.com>

	* basic-block.h (merge_blocks_nomove): Declare.
	(tidy_fallthru_edge): Declare.
	* flow.c (merge_blocks_nomove): Document as merging into previous
	blocks.  Remove cruft from between blocks; remove all edges out of A.
	(tidy_fallthru_edge): Export.

2000-04-06  Alex Samuel  <samuel@codesourcery.com>

	* ssa.c (compute_conservative_reg_partition): Declare with
	void arguments.
	* toplev.c (clean_dump_file): Remove previously-deleted function
	inadvertantly merged back in.
	* conflict.c (conflict_graph_add): Use a single call to
	htab_find_slot to look up and insert.

2000-04-06  Richard Henderson  <rth@cygnus.com>

	* genrecog.c (*): Rename _last_insn to last_insn.
	(make_insn_sequence): Set the position of the peephole2 C test
	to be at the last insn.

2000-04-06  Richard Henderson  <rth@cygnus.com>

	* flow.c (compute_flow_dominators): Free worklist.

2000-04-06  Michael Matz  <matzmich@cs.tu-berlin.de>

	* flow.c (compute_flow_dominators): Process blocks FIFO not LIFO.

2000-04-06  Alex Samuel  <samuel@codesourcery.com>

	* rtl.h (INSN_P): New macro.
	(successor_phi_fn): New typedef.
	(for_each_successor_phi): New prototype.
	(in_ssa_form): New variable.
	(PHI_NODE_P): Likewise.
	* flow.c (calculate_global_regs_live): Add to new_live_at_end from
	phi nodes in successors.
	(mark_used_regs): Add PHI case.
	(set_phi_alternative_reg): New function.
	(life_analysis): Assert that dead code elimination is not selected
	when in SSA form.
	* toplev.c (to_ssa_time): New variable.
	(from_ssa_time): Likewise.
	(compile_file): Zero to_ssa_time and from_ssa_time.
	Print time to convert to and from SSA.
	(rest_of_compilation): Time convert_to_ssa and convert_from_ssa.
	(print_time): Compute percent fraction as integer.
	* ssa.c (PHI_NODE_P): Moved to rtl.h.
	(convert_to_ssa): Check if we're already in SSA.  
	Don't eliminate dead code in life_analysis.
	Rerun flow and life analysis at bottom.